# illico

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  changelog.md  pyproject.toml  tox.ini
.benchmarks/Linux-CPython-3.12-64bit/: 0001_scanpy-speed-bench.json  0002_pdex-speed-bench.json  0003_illico-speed-bench.json  0004_illico-scaling-w-threads.json
.github/workflows/: PR-check.yaml  publish-package.yaml  python-package.yaml
illico/: __init__.py  asymptotic_wilcoxon.py
illico/ovo/: __init__.py  dense_ovo.py  sparse_ovo.py
illico/ovr/: __init__.py  dense_ovr.py  sparse_ovr.py
illico/utils/: compile.py  groups.py  math.py  memory.py  ranking.py  registry.py  type.py
illico/utils/sparse/: csc.py  csr.py
notebooks/: tests.ipynb
scripts/: generate-footprint-comparison.py  test.sh
tests/: conftest.py  test_asymptotic_wilcoxon.py
tests/utils/: test_compile.py  test_math.py  test_memory.py  test_ranking.py
tests/utils/sparse/: test_csc.py  test_csr.py
