[project]
name = "illico"
version = "0.1.1"
description = "Fast asymptotic mannwhitney-u test"
authors = [
    {name = "remydubois",email = "remydubois14@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "anndata (>=0.11)",
    "numba (>=0.63.1,<0.64.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "joblib (>=1.5.3,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-benchmark (>=5.1.0,<6.0.0)",
    "pytest-benchmark[histogram] (>=5.2.3,<6.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)",
    "scanpy (>=1.11.5,<2.0.0)",
    "pytest-memray (>=1.8.0,<2.0.0)",
    "memory-profiler (>=0.61.0,<0.62.0)",
    "pytest-regex (>=0.2.0,<0.3.0)",
    "pdex (>=0.1.27,<0.2.0)",
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.ruff]
extend-exclude = ["tests", "notebooks"]

[tool.pytest.ini_options]
markers = [
    "debug: benchmarks on 1% of datasets for debugging",
    "speed_bench: slow speed benchmarks tests",
    "memory_bench: slow memory benchmarks tests",
]
addopts = "-p no:warnings"
